--- a/src/app/user/login-page/login-page.component.html
+++ b/src/app/user/login-page/login-page.component.html
@@ -1,1 +1,14 @@
-<p>login-page works!</p>
+<main>
+  <div *ngIf="!(afAuth.authState | async)">
+    <button mat-raised-button appGoogleLogin>
+      <img src="/assets/google-logo.svg" /> Login with google
+    </button>
+  </div>
+
+  <div *ngIf="afAuth.authState | async as user" class="logout">
+    <p>
+      Logged in as <strong> {{ user.email }}</strong>
+    </p>
+    <button mat-stroked-button (click)="afAuth.signOut()">Logout</button>
+  </div>
+</main>
