--- a/src/app/kanban/board-list/board-list.component.html
+++ b/src/app/kanban/board-list/board-list.component.html
@@ -9,6 +9,13 @@
   </app-board>
 
   <div class="board-button">
-    <button mat-raised-button color="accent" cdkDragDisabled>New Board</button>
+    <button
+      mat-raised-button
+      color="accent"
+      cdkDragDisabled
+      (click)="openBoardDialog()"
+    >
+      New Board
+    </button>
   </div>
 </div>
