--- a/src/app/kanban/board-list/board-list.component.scss
+++ b/src/app/kanban/board-list/board-list.component.scss
@@ -1,3 +1,35 @@
+.boards {
+  width: auto;
+  padding: 24px;
+  display: flex;
+  flex-direction: row;
+  overflow-x: scroll;
+  &::-webkit-scrollbar {
+    height: 4px;
+    width: 4px;
+  }
+  &::-webkit-scrollbar-track {
+    //    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #000;
+  }
+  &::-webkit-scrollbar {
+    width: 3px;
+    background-color: #000;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #f5f5f5;
+    border: 2px solid #555555;
+  }
+
+  .handle {
+    position: relative;
+    top: 5px;
+    left: 0;
+    cursor: move;
+  }
+}
+
 .cdk-drag-placeholder {
   opacity: 0.2;
   width: 350px;
@@ -9,6 +41,17 @@
   transition: transform 300ms ease;
 }
 
-.cdk-drop-list-dragging .cdk-drag {
+.boards.cdk-drop-list-dragging .cdk-drag {
   transition: transform 300ms ease;
+}
+
+.board-button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 5px gray dashed;
+  width: 300px;
+  padding: 32px;
+  height: 350px;
 }
