added delete button

--- a/src/app/kanban/board/board.component.html
+++ b/src/app/kanban/board/board.component.html
@@ -29,6 +29,6 @@
       <mat-icon>add</mat-icon>
     </button>
 
-    <!-- <app-delete-button (delete)="handleDelete()"></app-delete-button> -->
+    <app-delete-button (delete)="handleDelete()"></app-delete-button>
   </div>
 </mat-card>
